CHANGES IN VERSION 1.5.7
------------------------
 o upsetplot function for csAnno object <2015-07-20, Mon>
 
CHANGES IN VERSION 1.5.6
------------------------
 o update citation info <2015-07-09, Thu>
 o BED file +1 shift for BED coordinate system start at 0 <2015-07-07, Tue>
 
CHANGES IN VERSION 1.5.5
------------------------
 o seq2gene for linking genomic regions to genes by many-to-manying mapping. <2015-06-29, Mon>
 
CHANGES IN VERSION 1.5.4
------------------------
 o add pseudocount in enrichPeakOverlap to prevent 0 pvalue <2015-05-22, Fri>
 
CHANGES IN VERSION 1.5.3
------------------------
 o convert the vignette from Rnw to Rmd format <2015-05-17, Sun>
 
CHANGES IN VERSION 1.5.1
------------------------
 o minor bug fixed in getChrCov <2015-04-27, Mon>

CHANGES IN VERSION 1.3.15
------------------------
 o update vignette <2015-03-31, Tue>

CHANGES IN VERSION 1.3.14
------------------------
 o add pool parameter in enrichPeakOverlap <2015-03-30, Mon>
 
CHANGES IN VERSION 1.3.13
------------------------
 o update enrichPeakOverlap to support nShuffle = 0, which now will report only overlay with pvalue = NA <2015-03-29, Sun>
 o add facet and free_y parameter for plotAvgProf and plotAvgProf2 <2015-03-29, Sun>
 o update docs <2015-03-29, Sun>
 o update plotAvgProf and plotAvgProf2 to fully supporting confidence interval,
   see https://github.com/GuangchuangYu/ChIPseeker/pull/6 <2015-03-29, Sun>
 
CHANGES IN VERSION 1.3.12
------------------------
 o add confidence interval for plotAvgProf, see https://github.com/GuangchuangYu/ChIPseeker/issues/3 <2015-03-26, Thu>
 
CHANGES IN VERSION 1.3.11
------------------------
 o add citation <2015-03-16, Mon>
 
CHANGES IN VERSION 1.3.10
------------------------
 o update GEO data <2015-03-03, Tue>
 
CHANGES IN VERSION 1.3.9
------------------------
 o add parameter *genomicAnnotationPriority* for annotatePeak function <2015-02-27, Fri>

CHANGES IN VERSION 1.3.8
------------------------