@@ -33,7 +33,10 @@ Imports:
     GenomicFeatures,
     ggplot2,
     gplots,
+    graphics,
     grDevices,
+    grid,
+    gridBase,
     gtools,
     methods,
     plotrix,
